<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/activityView"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:text="@string/hello_text"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_play" />

    <TextView
        android:id="@+id/leftTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/default_duration"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/rightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:gravity="end"
        android:text="@string/default_duration"
        android:textSize="12sp" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="17dp" />

    <CheckBox
        android:id="@+id/fadeInCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/leftTextView"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/fade_in" />

    <CheckBox
        android:id="@+id/fadeOutCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rightTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/fade_out" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/trimBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trim_btn"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/openFileBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/open_file_btn"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</RelativeLayout>